{{$NEXT}}

1.302008  2015-06-27 15:21:55-07:00 America/Los_Angeles

    - Fix 2 bugs with threading on 5.8.x
    - Fix a diag rendering bug with subtests

1.302007  2015-06-24 08:03:38-07:00 America/Los_Angeles

    - Add CanThread and CanFork libraries
    - Remove prefix when subtests are buffered
    - Fix bug where Exporter might remove other tools exports
    - Fix bug in unmunge and unlisten
    - Add helper for specifying a context in which to run
    - Add causes_fail method for events
    - Fix rendering bug in subtest diags
    - Fix bug where IPC abort would fail to set exit code
    - Remove XS support code
    - Fix bug when threads are auto-joined

1.302006  2015-06-18 09:53:04-07:00 America/Los_Angeles

    - MANIFEST.SKIP fix
    - Remove files accidentally included in the last dist

1.302005  2015-06-18 09:37:38-07:00 America/Los_Angeles

    - Remove broken test script

1.302004  2015-06-17 08:32:31-07:00 America/Los_Angeles

    - Add Support for XS
    - Improve release_pp with refcount from internals

1.302003  2015-06-06 21:44:42-07:00 America/Los_Angeles

    - Documentation added
    - Make IPC::Files safe in cleanup

1.302002  2015-06-06 14:06:57-07:00 America/Los_Angeles

    - Fix Win32 support

1.302001  2015-06-05 22:40:57-07:00 America/Los_Angeles

    - Initial Version